--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -31,16 +31,16 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.3.3",
+    "devexpress-reporting-angular": "21.1.*",
+    "devextreme": "21.1.5",
+    "devextreme-angular": "21.1.5",
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
     "ng2-search-filter": "^0.5.1",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
-    "zone.js": "0.9.1",
-    "devextreme": "21.1.5",
-    "devextreme-angular": "21.1.5",
-    "devexpress-reporting-angular": "21.1.*"
+    "zone.js": "0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.26",
