--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -31,6 +31,7 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.3.3",
+    "date-fns": "^2.29.3",
     "devexpress-reporting-angular": "21.1.*",
     "devextreme": "21.1.5",
     "devextreme-angular": "21.1.5",
