--- a/Redesign.csproj
+++ b/Redesign.csproj
@@ -10,6 +10,7 @@
     <BuildServerSideRenderer>false</BuildServerSideRenderer>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="date-fns.TypeScript.DefinitelyTyped" Version="0.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.8" />
     <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="4.1.2">
       <PrivateAssets>all</PrivateAssets>
@@ -25,6 +26,7 @@
   <ItemGroup>
     <None Remove="ClientApp\src\app\filter.pipe.ts" />
     <None Remove="ClientApp\src\app\formula-lookup\addphystability-test\Datepickerstability.ts" />
+    <None Remove="ClientApp\src\app\formula-lookup\addproduct-testing\my-date-editor.component.ts" />
     <None Remove="ClientApp\src\app\nav-item.ts" />
     <None Remove="ClientApp\src\app\pipefilter.ts" />
     <None Remove="ClientApp\src\app\pipefilter2.ts" />
