--- a/Redesign.csproj
+++ b/Redesign.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="date-fns.TypeScript.DefinitelyTyped" Version="0.0.1" />
+    <PackageReference Include="DevExpress.AspNetCore.Reporting" Version="21.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.8" />
     <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="4.1.2">
       <PrivateAssets>all</PrivateAssets>
