--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -26,6 +26,8 @@
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@servicestack/client": "^1.0.39",
+    "@types/jquery": "^3.5.14",
+    "@types/jquery.ui.datetimepicker": "^0.3.30",
     "ag-grid-angular": "^25.3.0",
     "ag-grid-community": "^25.3.0",
     "aspnet-prerendering": "^3.0.1",
@@ -36,7 +38,7 @@
     "devextreme": "21.1.5",
     "devextreme-angular": "21.1.5",
     "hammerjs": "^2.0.8",
-    "jquery": "3.4.1",
+    "jquery": "^3.4.1",
     "moment": "^2.29.4",
     "ng2-search-filter": "^0.5.1",
     "oidc-client": "^1.9.1",
